// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input Styles should prioritize disabled over error styles 1`] = `
.circuit-0 {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-4 {
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  background-color: #E6E6E6;
  box-shadow: 0 0 0 1px #999;
}

.circuit-5::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

<div>
  <div
    class="circuit-0"
  >
    <label
      class="circuit-1"
      for="input_21"
    >
      <span
        class="circuit-2 circuit-3"
      >
        Label
      </span>
    </label>
    <div
      class="circuit-4"
    >
      <input
        aria-describedby="validation-hint_22"
        aria-invalid="true"
        class="circuit-5"
        disabled=""
        id="input_21"
        value=""
      />
    </div>
    <span
      aria-live="polite"
      role="status"
    />
  </div>
</div>
`;

exports[`Input Styles should prioritize disabled over warning styles 1`] = `
.circuit-0 {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-4 {
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  background-color: #E6E6E6;
  box-shadow: 0 0 0 1px #999;
}

.circuit-5::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

<div>
  <div
    class="circuit-0"
  >
    <label
      class="circuit-1"
      for="input_23"
    >
      <span
        class="circuit-2 circuit-3"
      >
        Label
      </span>
    </label>
    <div
      class="circuit-4"
    >
      <input
        aria-describedby="validation-hint_24"
        class="circuit-5"
        disabled=""
        id="input_23"
        value=""
      />
    </div>
    <span
      aria-live="polite"
      role="status"
    />
  </div>
</div>
`;

exports[`Input Styles should render with a description when passed the validationHint prop 1`] = `
.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-4 {
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px #999;
}

.circuit-5::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-5:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-5:active {
  box-shadow: 0 0 0 1px #3063E9;
}

.circuit-6 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  display: block;
  margin-top: 4px;
  color: #666;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

<div>
  <div
    class="circuit-0"
  >
    <label
      class="circuit-1"
      for="input_7"
    >
      <span
        class="circuit-2 circuit-3"
      >
        Label
      </span>
    </label>
    <div
      class="circuit-4"
    >
      <input
        aria-describedby="validation-hint_8"
        class="circuit-5"
        id="input_7"
        value=""
      />
    </div>
    <span
      class="circuit-6"
      id="validation-hint_8"
    >
      Validation hint
    </span>
    <span
      aria-live="polite"
      role="status"
    />
  </div>
</div>
`;

exports[`Input Styles should render with a prefix when passed the prefix prop 1`] = `
.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-4 {
  position: relative;
}

.circuit-5 {
  position: absolute;
  pointer-events: none;
  color: #666;
  padding: 12px 16px;
  height: 48px;
  width: 48px;
}

.circuit-6 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  padding-left: 48px;
  box-shadow: 0 0 0 1px #999;
}

.circuit-6::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-6::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-6:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-6::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-6:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-6:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-6:active {
  box-shadow: 0 0 0 1px #3063E9;
}

<div>
  <div
    class="circuit-0"
  >
    <label
      class="circuit-1"
      for="input_3"
    >
      <span
        class="circuit-2 circuit-3"
      >
        Label
      </span>
    </label>
    <div
      class="circuit-4"
    >
      <div
        class="circuit-5"
        style="width: 24px; height: 24px;"
      />
      <input
        aria-describedby="validation-hint_4"
        class="circuit-6"
        id="input_3"
        value=""
      />
    </div>
    <span
      aria-live="polite"
      role="status"
    />
  </div>
</div>
`;

exports[`Input Styles should render with a suffix when passed the suffix prop 1`] = `
.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-4 {
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  padding-right: 48px;
  box-shadow: 0 0 0 1px #999;
}

.circuit-5::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-5:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-5:active {
  box-shadow: 0 0 0 1px #3063E9;
}

.circuit-6 {
  position: absolute;
  top: 0;
  right: 0;
  pointer-events: none;
  color: #666;
  padding: 12px 16px;
  height: 48px;
  width: 48px;
  -webkit-transition: right 120ms ease-in-out;
  transition: right 120ms ease-in-out;
}

<div>
  <div
    class="circuit-0"
  >
    <label
      class="circuit-1"
      for="input_5"
    >
      <span
        class="circuit-2 circuit-3"
      >
        Label
      </span>
    </label>
    <div
      class="circuit-4"
    >
      <input
        aria-describedby="validation-hint_6"
        class="circuit-5"
        id="input_5"
        value=""
      />
      <div
        class="circuit-6"
        style="width: 24px; height: 24px;"
      />
    </div>
    <span
      aria-live="polite"
      role="status"
    />
  </div>
</div>
`;

exports[`Input Styles should render with custom styles 1`] = `
.circuit-0 {
  border: 1px solid red;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-4 {
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px #999;
  color: red;
}

.circuit-5::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-5:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-5:active {
  box-shadow: 0 0 0 1px #3063E9;
}

<div>
  <div
    class="circuit-0"
  >
    <label
      class="circuit-1"
      for="input_25"
    >
      <span
        class="circuit-2 circuit-3"
      >
        Label
      </span>
    </label>
    <div
      class="circuit-4"
    >
      <input
        aria-describedby="validation-hint_26"
        class="circuit-5"
        id="input_25"
        value=""
      />
    </div>
    <span
      aria-live="polite"
      role="status"
    />
  </div>
</div>
`;

exports[`Input Styles should render with default styles 1`] = `
.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-4 {
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px #999;
}

.circuit-5::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-5:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-5:active {
  box-shadow: 0 0 0 1px #3063E9;
}

<div>
  <div
    class="circuit-0"
  >
    <label
      class="circuit-1"
      for="input_1"
    >
      <span
        class="circuit-2 circuit-3"
      >
        Label
      </span>
    </label>
    <div
      class="circuit-4"
    >
      <input
        aria-describedby="validation-hint_2"
        class="circuit-5"
        id="input_1"
        value=""
      />
    </div>
    <span
      aria-live="polite"
      role="status"
    />
  </div>
</div>
`;

exports[`Input Styles should render with disabled styles when passed the disabled prop 1`] = `
.circuit-0 {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-4 {
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  background-color: #E6E6E6;
  box-shadow: 0 0 0 1px #999;
}

.circuit-5::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

<div>
  <div
    class="circuit-0"
  >
    <label
      class="circuit-1"
      for="input_19"
    >
      <span
        class="circuit-2 circuit-3"
      >
        Label
      </span>
    </label>
    <div
      class="circuit-4"
    >
      <input
        aria-describedby="validation-hint_20"
        class="circuit-5"
        disabled=""
        id="input_19"
        value=""
      />
    </div>
    <span
      aria-live="polite"
      role="status"
    />
  </div>
</div>
`;

exports[`Input Styles should render with invalid styles when passed the invalid prop 1`] = `
.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-4 {
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px #DE331D;
}

.circuit-5::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:not(:focus)::-webkit-input-placeholder {
  color: #DE331D;
  opacity: 0.5;
}

.circuit-5:not(:focus)::-moz-placeholder {
  color: #DE331D;
  opacity: 0.5;
}

.circuit-5:not(:focus):-ms-input-placeholder {
  color: #DE331D;
  opacity: 0.5;
}

.circuit-5:not(:focus)::placeholder {
  color: #DE331D;
  opacity: 0.5;
}

.circuit-5:hover {
  box-shadow: 0 0 0 1px #B22426;
}

.circuit-5:focus {
  box-shadow: 0 0 0 2px #DE331D;
}

.circuit-5:active {
  box-shadow: 0 0 0 1px #DE331D;
}

<div>
  <div
    class="circuit-0"
  >
    <label
      class="circuit-1"
      for="input_11"
    >
      <span
        class="circuit-2 circuit-3"
      >
        Label
      </span>
    </label>
    <div
      class="circuit-4"
    >
      <input
        aria-describedby="validation-hint_12"
        aria-invalid="true"
        class="circuit-5"
        id="input_11"
        value=""
      />
    </div>
    <span
      aria-live="polite"
      role="status"
    />
  </div>
</div>
`;

exports[`Input Styles should render with readonly styles when passed the readOnly prop 1`] = `
.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-4 {
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  background-color: #F5F5F5;
  box-shadow: 0 0 0 1px #999;
}

.circuit-5::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-5:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-5:active {
  box-shadow: 0 0 0 1px #3063E9;
}

<div>
  <div
    class="circuit-0"
  >
    <label
      class="circuit-1"
      for="input_17"
    >
      <span
        class="circuit-2 circuit-3"
      >
        Label
      </span>
    </label>
    <div
      class="circuit-4"
    >
      <input
        aria-describedby="validation-hint_18"
        class="circuit-5"
        id="input_17"
        readonly=""
        value=""
      />
    </div>
    <span
      aria-live="polite"
      role="status"
    />
  </div>
</div>
`;

exports[`Input Styles should render with right aligned text 1`] = `
.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-4 {
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  text-align: right;
  box-shadow: 0 0 0 1px #999;
}

.circuit-5::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-5:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-5:active {
  box-shadow: 0 0 0 1px #3063E9;
}

<div>
  <div
    class="circuit-0"
  >
    <label
      class="circuit-1"
      for="input_15"
    >
      <span
        class="circuit-2 circuit-3"
      >
        Label
      </span>
    </label>
    <div
      class="circuit-4"
    >
      <input
        aria-describedby="validation-hint_16"
        class="circuit-5"
        id="input_15"
        value=""
      />
    </div>
    <span
      aria-live="polite"
      role="status"
    />
  </div>
</div>
`;

exports[`Input Styles should render with valid styles when passed the showValid prop 1`] = `
.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-4 {
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px #999;
}

.circuit-5::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-5:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-5:active {
  box-shadow: 0 0 0 1px #3063E9;
}

<div>
  <div
    class="circuit-0"
  >
    <label
      class="circuit-1"
      for="input_13"
    >
      <span
        class="circuit-2 circuit-3"
      >
        Label
      </span>
    </label>
    <div
      class="circuit-4"
    >
      <input
        aria-describedby="validation-hint_14"
        class="circuit-5"
        id="input_13"
        value=""
      />
    </div>
    <span
      aria-live="polite"
      role="status"
    />
  </div>
</div>
`;

exports[`Input Styles should render with warning styles when passed the hasWarning prop 1`] = `
.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-4 {
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px #F5A720;
}

.circuit-5::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:not(:focus)::-webkit-input-placeholder {
  color: #F5A720;
}

.circuit-5:not(:focus)::-moz-placeholder {
  color: #F5A720;
}

.circuit-5:not(:focus):-ms-input-placeholder {
  color: #F5A720;
}

.circuit-5:not(:focus)::placeholder {
  color: #F5A720;
}

.circuit-5:hover {
  box-shadow: 0 0 0 1px #AD7A14;
}

.circuit-5:focus {
  box-shadow: 0 0 0 2px #F5A720;
}

.circuit-5:active {
  box-shadow: 0 0 0 1px #F5A720;
}

<div>
  <div
    class="circuit-0"
  >
    <label
      class="circuit-1"
      for="input_9"
    >
      <span
        class="circuit-2 circuit-3"
      >
        Label
      </span>
    </label>
    <div
      class="circuit-4"
    >
      <input
        aria-describedby="validation-hint_10"
        class="circuit-5"
        id="input_9"
        value=""
      />
    </div>
    <span
      aria-live="polite"
      role="status"
    />
  </div>
</div>
`;
